--- a/syllabus/index.qmd
+++ b/syllabus/index.qmd
@@ -1,82 +1,75 @@
 ---
 title: "Applied Data Science for Cities"
-subtitle: "11.S187/11.S954  |  Fall 2023"
+subtitle: "11.S196/11.S939  |  Fall 2024"
 ---
 
-### Description
+### **Description**
 
 Urban data science draws upon statistics, visualization, and computation to better understand and ultimately shape cities. This course emphasizes telling stories about cities using a set of descriptive approaches, quantitative and spatial analysis in R. We will learn how to describe community characteristics with small area census data, work with local administrative data, and think about how our analysis of quantitative data fit with other forms of data and engagement to fill in gaps in knowledge.
 
 Learning objectives:
 
--   Gain familiarity with R as a data analysis, mapping, and storytelling tool.
--   Be able to identify relevant open datasets in support of your research question.
--   Articulate the main arguments for your data analysis product and how it supports planning and decision-making regarding an issue of local/national significance.
+-   Learn - begin developing core data science competencies such as data wrangling, visualization, analysis, and communication;
 
-### How Will We Be Learning
+-   Apply - apply concepts introduced in the readings and lectures to analyze datasets drawn from cities around the world;
+
+-   Visualize - manipulate tabular and geospatial data to produce intelligible and useful graphics for inclusion in documents and dissemination on the web;
+
+-   Synthesize - translate the results of visualization and analysis for use in decision-making and policy development.
+
+#### **How Will We Be Learning**
 
 **Lecture:** Class meetings are generally divided into lecture (Mondays) and laboratory sessions (Wednesdays) that focus on concepts and hand-on applications, respectively.
 
-**Lab:** We will provide data science tutorials using R. Each lab tutorial aims to solve a specific urban data science problem in addition to building coding skills. Lab reports are due before the subsequent lab period and should be written independently.
+**Lab:** We will provide data science tutorials using R. Each lab tutorial aims to solve a specific urban data science problem in addition to building coding skills. Lab reports are due before the subsequent lab session and should be written independently.
 
 **Extension readings:** We provide a light material list that focuses on specific topics each week. These resources are meant to expand your knowledge and enhance your project completion capabilities.
 
-**Urban data science project:** The term project for the course will focus on integrating the tools of data science to explore a specific real-world planning issue or research question. This is a group project and students will define the scope of the project and identify specific deliverable(s) early in the semester. Reproducing an existing analysis or study using different data or an alternate study area is also acceptable for the term project.
+**Urban data science project:** The term project for the course will focus on integrating the tools of data science to explore a specific real-world planning issue or research question. This is a group project and students will define the scope of the project and identify specific deliverable(s) early in the semester. Reproducing an existing analysis or study using different datasets or an alternate study area is also acceptable for the term project.
 
-### Prerequisites
+#### **Prerequisites**
 
-This is a relatively fast-paced course so students can benefit from some prior knowledge working in R and RStudio. However, this is not a course prerequisite. Our first course sessions will focus on ensuring that we are all familiar with some of the basic work environment and methods which we'll make use of over the semester.
+This is a relatively fast-paced course so students can benefit from some prior knowledge working in R and RStudio. However, this is not a course prerequisite. Our first course sessions will focus on ensuring that we are all familiar with some of the basic work environment and methods which we\'ll make use of over the semester.
 
-### Assessment
+####  **Assessment**
 
-+----------------------+--------+
-| Assignment           | Weight |
-+======================+========+
-| Lab Reports          | 40%    |
-|                      |        |
-| Package Introduction | 10%    |
-|                      |        |
-| Project Scope Memo   | 10%    |
-|                      |        |
-| Project Presentation | 30%    |
-|                      |        |
-| Attendance           | 10%    |
-+----------------------+--------+
+|                      |            |
+|----------------------|------------|
+| **Assignment**       | **Weight** |
+| Lab Reports          | 50%        |
+| Project Proposal     | 10%        |
+| Project Presentation | 30%        |
+| Attendance           | 10%        |
 
-### Key Logistics
+#### **Key Logistics**
 
-**Lab Exercises:** You will be working on lab on most Wednesday classes and submit a short report before the subsequent class. Details will be specified in each of the assignments distributed at the beginning of the lab session.
+**Lab Reports:** You will be working on lab on most Wednesday classes and submit a short report before the next lab session. Details will be specified in each assignment submission page on Canvas.
 
-**Package Introduction:** Each student is expected to introduce one package to the class that is relevant to your research interests. The objectives are (1) to foster a collaborative approach to acquiring familiarity with the ever-increasing new packages, and (2) to identify valuable existing R packages applicable to your study. A separate guideline will be distributed at the beginning of the course.
-
-**Project Scope Memo:** Due Friday, Nov 17.
-
+**Project Proposal:** Due Monday, Nov 18.\
 The purpose of this memo is to communicate the scope of your project (what you will do) and your strategies for collecting, visualizing, and analyzing data (how you will do it). A separate guideline will be distributed at the beginning of the course.
 
-**Project Presentation:** Week 8 (Dec 11 -- Dec 13), class time.
+**Project Presentation:** Week 8 (Dec 9 -- Dec 11), class time. Presentations slides will due Dec 9.
 
-### Late policy
+#### **Late policy**
 
-To keep all students on a relatively level playing field, a late assignment will be accepted up until one week after the original due date for a loss of a half-letter grade (e.g., an A becomes an A-). After one week, late assignments will receive no credit and will not be accepted.
+To keep all students on a relatively level playing field, 5% will be deducted for late assignments, with an additional 5% deducted for each subsequent day. Late assignments two weeks after the due date will receive no credit and will not be accepted.
 
-### Software
+####  **Software**
 
-We use R and R Studio as the coding environment to develop analysis and applications. You can install the software on your personal computers from [here](https://cran.r-project.org/bin/windows/base/) and [here](https://rstudio.com/products/rstudio/download/).
+We use R and R Studio as the coding environment to develop analysis and applications. You will need to install both software on your personal computers from [hereLinks to an external site.](https://cran.r-project.org/bin/windows/base/) and [hereLinks to an external site.](https://rstudio.com/products/rstudio/download/).
 
-### Communication
+####  **Communication**
 
 Plan on using our class Slack channel, email, and office hours to get help with troubleshooting problems as they arise in your work. I also encourage you to work with others in the class to troubleshoot problems - it is highly likely that others in the class have encountered similar problems, and this also allows us to create a repository of our problems and responses.
 
-**Email:** I check emails quite frequently, but I will not always be able to respond to emails right away. Please plan accordingly so that you don't miss deadlines.
+**Email:** I check emails quite frequently, but I will not always be able to respond to emails right away. Please plan accordingly so that you don\'t miss deadlines.\
+**Slack:** We have a Slack workspace that is accessible through Canvas for general communication, including homework Q&A, resource exchange, project collaboration, etc.\
+**Office hours:** Please consult the top of the syllabus for specific times. I will announce if there are any changes or exceptions. I\'m happy to answer any specific coding questions, or chat and help shape the objective and scope of your projects.
 
-**Slack:** We have a Slack workspace that is accessible through Canvas for general communication, including homework Q&A, resource exchange, project collaboration, etc.
+#### **Ethics**
 
-**Office hours:** Please consult the top of the syllabus for specific times. I will announce if there are any changes or exceptions. I'm happy to answer any specific coding questions, or chat and help shape the objective and scope of your projects.
+**Academic Integrity:** Violations to academic integrity are unacceptable at MIT and DUSP. Instances of misconduct include but are not limited to plagiarism, cheating, and deliberately unauthorized use of course data and material.
 
-### Ethics
+**Collaboration Policy:** While team collaboration is encouraged, students should specify their roles and tasks in a project. A positive and constructive attitude toward teamwork is essential for the successful completion of the course.
 
-**Academic Integrity:** Violations to academic integrity are unacceptable at MIT and DUSP. [Instances of misconduct](http://integrity.mit.edu/) include but are not limited to plagiarism, cheating, deliberately unauthorized use of course data and material.
-
-**Collaboration Policy:** While team collaboration is encouraged, students should specify their role and tasks in a project. A positive and constructive attitude for teamwork is essential for a successful completion of the course.
-
-**Diversity and Inclusion:** MIT highly values a diverse, friendly, respectful, and inclusive learning environment among students, faculty, and staff. We welcome all individuals regardless of their origin, citizenship, gender identity, sexual orientation, religious and pollical beliefs. Please contact me or departmental staff if you have any question / consideration regarding this.
+**Diversity and Inclusion:** MIT highly values a diverse, friendly, respectful, and inclusive learning environment among students, faculty, and staff. We welcome all individuals regardless of their origin, citizenship, gender identity, sexual orientation, or religious and political beliefs. Please contact me or departmental staff if you have any questions / considerations regarding this.
